fixing html and body to remove vertical scrollbars

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -1,3 +1,8 @@
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
 .column {
   float: left;
   width: 25%;
